# TranslateNowel

./: .gitignore  README.md  config.yaml  pyproject.toml
prompts/: 01_extract_glossary_ru.txt  02_validate_glossary_ru.txt  03_draft_translate_ru.txt  04_check_draft_ru.txt  05_revise_literary_ru.txt  06_final_check_ru.txt  07_chapter_summary_ru.txt  08_repair_issue_ru.txt  09_reference_style_ru.txt
scripts/: epub-translate.cmd  epub-translate.ps1
src/epub_llm_translate/: __init__.py  cli.py  config.py  utils.py
src/epub_llm_translate/backends/: __init__.py  base.py  fake.py  ollama.py  openai_compatible.py
src/epub_llm_translate/db/: __init__.py  connection.py  migrations.py  models.py  repositories.py
src/epub_llm_translate/epub/: __init__.py  chapter_map.py  html_blocks.py  reader.py  writer.py
src/epub_llm_translate/glossary/: __init__.py  extractor.py  merger.py  review_export.py  validator.py
src/epub_llm_translate/gui/: __init__.py  chapter_browser.py  context_review_editor.py  dashboard.py  edit_history_viewer.py  glossary_editor.py  gui_workers.py  issue_queue.py  logs_viewer.py  main_window.py  reference_examples_viewer.py  view_models.py
src/epub_llm_translate/memory/: __init__.py  book_memory.py  chapter_summary.py  character_memory.py
src/epub_llm_translate/pipeline/: build_final.py  check_draft.py  common.py  draft_translate.py  final_check.py  inspect.py  jobs.py  repair_issue.py  revise.py  runner.py  (+1 more)
tests/: __init__.py  test_cli_gui.py  test_config_db_glossary.py  test_draft_translate.py  test_epub_pipeline.py  test_openai_backend.py
(+16 files in other folders)
