[project]
name = "epub-llm-translate"
version = "0.1.0"
description = "Local EPUB novel translation pipeline with SQLite state and PySide6 review UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ebooklib>=0.18",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "lxml>=5.2.1",
    "pydantic>=2.7.0",
    "pyside6>=6.7.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
epub-translate = "epub_llm_translate.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

